# openhfp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
conformance/: README.md  gen.mjs  run.mjs  wasi-run.mjs
conformance/cases/base/: expect.json  input.hfp
conformance/cases/bom/: input.hfp
conformance/cases/crlf/: input.hfp
conformance/cases/different-data/: input.hfp
conformance/cases/dup-data/: expect.json  input.hfp
conformance/cases/formatted/: canonical.bytes  input.hfp
conformance/cases/invalid-utf8/: expect.json  input.hfp
conformance/cases/minified/: input.hfp
conformance/cases/missing-data/: expect.json  input.hfp
conformance/cases/reordered-attrs/: canonical.sha256  input.hfp
conformance/verify/: build-cases.mjs  gen-pki.sh  run-verify.mjs
crates/hfp-cli/: Cargo.toml
crates/hfp-cli/src/: main.rs
crates/hfp-core/: Cargo.toml
crates/hfp-core/src/: canon.rs  lib.rs  schema.rs  sign.rs  verify.rs
crates/hfp-wasm/: Cargo.toml
crates/hfp-wasm/src/: lib.rs
examples/: README.md
spec/: README.md  canonicalization.md  format.md  runtime.md  spike-a-findings.md  spike-b-findings.md  threat-model.md
templates/: README.md
templates/plain-html/: form.hfp
