[workspace]
resolver = "2"
members = ["crates/hfp-core", "crates/hfp-cli", "crates/hfp-wasm"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/openhfp/openhfp"
authors = ["Jiří Hlaváček and OpenHFP contributors"]
rust-version = "1.85"

[workspace.dependencies]
hfp-core = { path = "crates/hfp-core" }
