[package]
name = "hfp-cli"
description = "Command-line interface for the HFP (HTML Form Package) format."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "hfp"
path = "src/main.rs"

[dependencies]
hfp-core = { workspace = true }
