[package]
name = "hfp-wasm"
description = "WASM bindings for the HFP read side (canonicalize, extract, validate) — the browser/dev-shim build of hfp-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Read side only (default-features = false) — no CMS/RSA/getrandom in the browser build.
hfp-core = { path = "../hfp-core", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1"
